namespace Checkers.Classes;

public record struct Position(int X, int Y);