namespace Checkers.Models;

using Checkers.Interfaces;

public class Board : IBoard {

    private readonly IPiece?[,] _grid; // Di set sekali dalam constructor
    public int Size { get; }

    public Board(int size) {
        Size = size;
        _grid = new IPiece[Size, Size]; // Set size dari grid
    }

    public IPiece? this[int x, int y] {
        get => _grid[x, y];
        set => _grid[x, y] = value;
    }

}

// 0     (0,0)   (0,1)   (0,2)   (0,3)   (0,4)   (0,5)   (0,6)   (0,7)  Black Tile -> (x+y) % 2 != 0 // Ganjil 

// 1     (1,0)   (1,1)   (1,2)   (1,3)   (1,4)   (1,5)   (1,6)   (1,7)   

// 2     (2,0)   (2,1)   (2,2)   (2,3)   (2,4)   (2,5)   (2,6)   (2,7)   

// 3     (3,0)   (3,1)   (3,2)   (3,3)   (3,4)   (3,5)   (3,6)   (3,7)  

// 4     (4,0)   (4,1)   (4,2)   (4,3)   (4,4)   (4,5)   (4,6)   (4,7)   

// 5     (5,0)   (5,1)   (5,2)   (5,3)   (5,4)   (5,5)   (5,6)   (5,7)   

// 6     (6,0)   (6,1)   (6,2)   (6,3)   (6,4)   (6,5)   (6,6)   (6,7)   

// 7     (7,0)   (7,1)   (7,2)   (7,3)   (7,4)   (7,5)   (7,6)   (7,7)   

//         0       1       2       3       4       5       6       7
