namespace Checkers;

public enum PieceColor {
    RED,
    BLACK
}