namespace Checkers;

public enum PieceType {
    NORMAL,
    KING
}