classDiagram
    class GameController {

        -IBoard _board ✅
        -List~IPlayer~ _players ✅
        -int _currentPlayerIndex ✅
        -Dictionary~IPlayer, List<.IPieces>~ _playerPieces ✅
        +Action~Position,Position~ OnMoveExecuted
        
        + GameController(IBoard, IPlayer, IPlayer) ✅
        + InitializeBoard(IBoard) ✅
        + StartGame() ✅
        + HandleMove(Position, Position) bool ✅
        + MovePiece(IPiece, Position) ✅
        + CanMoveTo(IPiece, Position) bool ✅
        + GetPossibleMoves(IPiece) List~Position~ ✅
        + GetAllValidMovesForPlayer(IPlayer) Dictionary~IPiece, List<.Position>~ ✅
        + EvaluateMove(Position, Position) bool 
        + GetCapturedPositions(Position, Position) List~Position~ ✅
        + IsCapture(Position, Position) bool ✅
        + CapturePiece(Position, Position) ✅
        + HasForcedCaptures(IPlayer) bool ✅
        + GetCaptureChain(Position, Position) List~Position~ ✅
        + PromoteIfNeeded(IPiece) ✅
        + SwitchTurn() ✅
        + GetCurrentPlayer() IPlayer ✅
        + IsGameOver() bool ✅
        + EndGame() ✅

    }

    class IBoard {
        <<interface>>
        +int Size ✅
        +IPiece this(int, int) ✅

    }

    class Board {
        -IPiece[,] _grid ✅
        +int Size ✅
        +IPiece this(int, int) ✅
        +Board(int) ✅
        %% Board Constructor to define grid size
    }
    
    class IPlayer {
        +PieceColor Color ✅
        +string Name ✅
    }
    
    class Player {
        +PieceColor Color ✅
        +string Name ✅
    }
    
    class IPiece {
        +PieceColor Color ✅
        +Position Position ✅
        +PieceType PieceType ✅
    }
    
    class Piece {
        +PieceColor Color ✅
        +Position Position ✅
        +PieceType PieceType ✅
    }
    
    class Position {
        <<Record Struct>>
        +int X ✅
        +int Y ✅
    }

    class PieceType {
        <<Enumeration>>
        NORMAL ✅
        KING ✅
    }
    
    class PieceColor {
        <<Enumeration>>
        RED ✅
        BLACK ✅
    }

    GameController *-- IBoard
    GameController *-- IPlayer
    GameController *-- IPiece
    GameController *-- Position

    IBoard <|.. Board
    IPlayer <|.. Player
    IPiece <|.. Piece
    Piece <-- PieceType
    Piece <-- PieceColor

    Position <-- IPiece